# room_reservation_spreadsheets

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.production.yml  main.py  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 24ac0b2bc183_add_user_model.py  4f19cb2d0f4b_add_description.py  72a4e98c482d_add_user_relationship_to_reservation.py  85c2814b3c72_first_migration.py  abaed7aa0cbf_add_reservation_model.py
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  google_api.py  meeting_room.py  reservation.py  user.py
app/core/: base.py  config.py  db.py  google_client.py  user.py
app/crud/: base.py  meeting_room.py  reservation.py
app/models/: __init__.py  meeting_room.py  reservation.py  user.py
app/schemas/: meeting_room.py  reservation.py  user.py
app/services/: google_api.py
infra/: nginx.conf
