[project]
name = "room-reservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogoogle==5.13.0",
    "aiosqlite==0.20.0",
    "alembic==1.13.1",
    "fastapi==0.115.5",
    "fastapi-users[sqlalchemy]==13.0.0",
    "pydantic-settings==2.6.1",
    "sqlalchemy[asyncio]==2.0.30",
    "uvicorn[standard]==0.32.1",
]

[dependency-groups]
dev = []
